--- a/ML.ipynb
+++ b/ML.ipynb
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Utilizamos la clase **CountVectorizer** de scikit para convertir las descripciones en representaciones numéricas."
+    "Utilizamos la clase **CountVectorizer** de scikit para convertir las descripciones de la columna en representaciones numéricas."
    ]
   },
   {
