--- a/Jupyter Notebooks/ETL.ipynb
+++ b/Jupyter Notebooks/ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "import gzip\n",
     "import json\n",
     "import nltk\n",
+    "import pyarrow as pa\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n"
@@ -5675,33 +5676,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exportamos las tablas `items_games` y `review_games` para posteriores análisis. Debido al gran tamaño de éstas, lo exportamos en archivos *.csv* utilizando la biblioteca **`pyarrow`**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Instalamos la biblioteca faltante"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pyarrow in c:\\users\\dell\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (14.0.1)\n",
-      "Requirement already satisfied: numpy>=1.16.6 in c:\\users\\dell\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pyarrow) (1.25.1)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install pyarrow"
+    "Exportamos las tablas `items_games` y `review_games` para posteriores análisis. Debido al gran tamaño de éstas, lo exportamos en archivos *.parquet* utilizando la librería **`pyarrow`**"
    ]
   },
   {
@@ -5754,7 +5729,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Guardamos el Dataframe 'steam_games' como un .parquet\n",
+    "# Guardamos el Dataframe 'steam_games' como un archivo .parquet\n",
     "steam_games.to_parquet(os.path.join('Dataset', 'steam_games.parquet'), index=False)"
    ]
   },
@@ -5764,7 +5739,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Guardamos el Dataframe 'user_items_desplegado' como un .parquet\n",
+    "# Guardamos el Dataframe 'user_items_desplegado' como un archivo .parquet\n",
     "user_items_desplegado.to_parquet(os.path.join('Dataset', 'user_items.parquet'), index=False)"
    ]
   },
@@ -5774,7 +5749,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Guardamos el Dataframe 'user_reviews_desplegado' como un .parquet\n",
+    "# Guardamos el Dataframe 'user_reviews_desplegado' como un archivo .parquet\n",
     "user_reviews_desplegado.to_parquet(os.path.join('Dataset', 'user_reviews.parquet'), index=False)"
    ]
   }
