--- a/Jupyter Notebooks/ETL.ipynb
+++ b/Jupyter Notebooks/ETL.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,11 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_reviews = read_json_an('Dataset\\\\user_reviews.json.gz')"
+    "df_reviews = read_json_an('..\\\\Dataset\\\\user_reviews.json.gz')"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_items = read_json_an('Dataset\\\\users_items.json.gz')"
+    "df_items = read_json_an('..\\\\Dataset\\\\users_items.json.gz')"
    ]
   },
   {
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_steam_games = read_json_nan('Dataset\\\\steam_games.json.gz')"
+    "df_steam_games = read_json_nan('..\\\\Dataset\\\\steam_games.json.gz')"
    ]
   },
   {
