--- a/Jupyter Notebooks/ML.ipynb
+++ b/Jupyter Notebooks/ML.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "steam_games = pd.read_parquet('Dataset/steam_games.parquet')\n",
+    "steam_games = pd.read_parquet('..\\\\Dataset\\\\steam_games.parquet')\n",
     "steam_games"
    ]
   },
@@ -92,7 +92,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Creamos una instancia de la clase CountVectorizer\n",
+    "vector = CountVectorizer(tokenizer= lambda x: x.split(', '))\n",
+    "\n",
+    "# Dividimos cada cadena de descripción en palabras individuales y se crea una matriz de conteo que representa cuántas veces aparece cada género en cada videojuego.\n",
+    "matriz_descripcion = vector.fit_transform(steam_games['description'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recomendacion_juego(id_producto: int):\n",
+    "    '''\n",
+    "    Se ingresa el id de producto (item_id) y retorna una lista con 5 juegos recomendados similares al ingresado (title).\n",
+    "    \n",
+    "    '''\n",
+    "    # Si el id ingresado no se encuentra en la columna de id de la tabla 'steam_games' se le pide al usuario que intente con otro id\n",
+    "    if id_producto not in steam_games['item_id'].values:\n",
+    "        return 'El ID no existe, intente con otro'\n",
+    "    else:\n",
+    "        # buscamos el índice del id ingresado\n",
+    "        index = steam_games.index[steam_games['item_id']==id_producto][0]\n",
+    "\n",
+    "        # De la matriz de conteo, tomamos el array de descripciones con índice igual a 'index'\n",
+    "        description_index = matriz_descripcion[index]\n",
+    "\n",
+    "        # Calculamos la similitud coseno entre la descripción de entrada y la descripción de las demás filas: cosine_similarity(description_index, matriz_descripcion)\n",
+    "        # Obtenemos los índices de las mayores similitudes mediante el método argsort() y las similitudes ordenadas de manera descendente\n",
+    "        # Tomamos los índices del 1 al 6 [0, 1:6] ya que el índice 0 es el mismo índice de entrada\n",
+    "        indices_maximos = np.argsort(-cosine_similarity(description_index, matriz_descripcion))[0, 1:6]\n",
+    "\n",
+    "        # Construimos la lista\n",
+    "        recomendaciones = []\n",
+    "        for i in indices_maximos:\n",
+    "            recomendaciones.append(steam_games['title'][i])\n",
+    "        \n",
+    "        return recomendaciones"
+   ]
   }
  ],
  "metadata": {
