--- a/Jupyter Notebooks/TestAPI.ipynb
+++ b/Jupyter Notebooks/TestAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,19 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "items_games = pd.read_parquet('items_games.parquet')\n",
-    "reviews_games = pd.read_parquet('reviews_games.parquet')\n",
+    "items_games = pd.read_parquet('..\\\\Archivos API\\\\items_games.parquet')\n",
+    "reviews_games = pd.read_parquet('..\\\\Archivos API\\\\reviews_games.parquet')\n",
     "\n",
     "#steam_games = pd.read_parquet('../STEAM-MLOps/steam_games_ml.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "[7461483 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "[101587 rows x 10 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "       'Audio Production'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,22 +526,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Año de lanzamiento con más horas jugadas para el género Action': 2012}"
+       "{'Año de lanzamiento con más horas jugadas para el género Strategy': 2015}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "genero = PlayTimeGenre('Action')\n",
+    "genero = PlayTimeGenre('Strategy')\n",
     "genero"
    ]
   },
