--- a/Jupyter Notebooks/ETL.ipynb
+++ b/Jupyter Notebooks/ETL.ipynb
@@ -13,7 +13,6 @@
     "import json\n",
     "import nltk\n",
     "import pyarrow as pa\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n"
    ]
@@ -2370,7 +2369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Convertimos el etipo de dato de `item_id` a entero y el de `posted` a Date"
+    "Convertimos el tipo de dato de `item_id` a entero y el de `posted` a Date"
    ]
   },
   {
@@ -5520,7 +5519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "De la tabla `items_games` seleccionamos sólo las columnas que usaremos para la API y, con ellas, armamos un dataframe llamado `items_games_API`"
+    "De la tabla `items_games` seleccionamos sólo las columnas que usaremos para la API y, con ellas, armamos un dataframe llamado `items_games_API`."
    ]
   },
   {
@@ -5683,7 +5682,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exportamos las tablas a la carpeta 'Dataset'"
+    "Exportamos las tablas a la carpeta **Archivos API**"
    ]
   },
   {
