--- a/Jupyter Notebooks/TestAPI.ipynb
+++ b/Jupyter Notebooks/TestAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,10 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "items_games = pd.read_parquet('..\\\\Archivos API\\\\items_games.parquet')\n",
-    "reviews_games = pd.read_parquet('..\\\\Archivos API\\\\reviews_games.parquet')\n",
-    "\n",
-    "#steam_games = pd.read_parquet('../STEAM-MLOps/steam_games_ml.parquet')"
+    "items_games = pd.read_parquet('..\\\\Archivos API\\\\items_games_API.parquet')\n",
+    "reviews_games = pd.read_parquet('..\\\\Archivos API\\\\reviews_games.parquet')"
    ]
   },
   {
@@ -58,65 +56,47 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>item_id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>playtime_forever</th>\n",
        "      <th>genres</th>\n",
-       "      <th>release_date</th>\n",
        "      <th>year_release</th>\n",
+       "      <th>playtime_forever</th>\n",
+       "      <th>user_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>76561197970982479</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Counter-Strike</td>\n",
-       "      <td>6</td>\n",
        "      <td>Action</td>\n",
-       "      <td>2000-11-01</td>\n",
        "      <td>2000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>76561197970982479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>js41637</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Counter-Strike</td>\n",
-       "      <td>0</td>\n",
        "      <td>Action</td>\n",
-       "      <td>2000-11-01</td>\n",
        "      <td>2000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>js41637</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Riot-Punch</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Counter-Strike</td>\n",
-       "      <td>0</td>\n",
        "      <td>Action</td>\n",
-       "      <td>2000-11-01</td>\n",
        "      <td>2000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Riot-Punch</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>doctr</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Counter-Strike</td>\n",
-       "      <td>93</td>\n",
        "      <td>Action</td>\n",
-       "      <td>2000-11-01</td>\n",
        "      <td>2000</td>\n",
+       "      <td>93</td>\n",
+       "      <td>doctr</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>corrupted_soul</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Counter-Strike</td>\n",
-       "      <td>108</td>\n",
        "      <td>Action</td>\n",
-       "      <td>2000-11-01</td>\n",
        "      <td>2000</td>\n",
+       "      <td>108</td>\n",
+       "      <td>corrupted_soul</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -124,93 +104,62 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7461478</th>\n",
-       "      <td>76561198071808318</td>\n",
-       "      <td>444770</td>\n",
-       "      <td>Mimpi Dreams</td>\n",
-       "      <td>46</td>\n",
        "      <td>Indie</td>\n",
-       "      <td>2016-03-22</td>\n",
        "      <td>2016</td>\n",
+       "      <td>46</td>\n",
+       "      <td>76561198071808318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7461479</th>\n",
-       "      <td>76561198107283457</td>\n",
-       "      <td>354280</td>\n",
-       "      <td>ChaosTower</td>\n",
-       "      <td>164</td>\n",
        "      <td>Action</td>\n",
-       "      <td>2016-02-23</td>\n",
        "      <td>2016</td>\n",
+       "      <td>164</td>\n",
+       "      <td>76561198107283457</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7461480</th>\n",
-       "      <td>76561198107283457</td>\n",
-       "      <td>354280</td>\n",
-       "      <td>ChaosTower</td>\n",
-       "      <td>164</td>\n",
        "      <td>Casual</td>\n",
-       "      <td>2016-02-23</td>\n",
        "      <td>2016</td>\n",
+       "      <td>164</td>\n",
+       "      <td>76561198107283457</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7461481</th>\n",
-       "      <td>76561198107283457</td>\n",
-       "      <td>354280</td>\n",
-       "      <td>ChaosTower</td>\n",
-       "      <td>164</td>\n",
        "      <td>Indie</td>\n",
-       "      <td>2016-02-23</td>\n",
        "      <td>2016</td>\n",
+       "      <td>164</td>\n",
+       "      <td>76561198107283457</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7461482</th>\n",
-       "      <td>76561198107283457</td>\n",
-       "      <td>354280</td>\n",
-       "      <td>ChaosTower</td>\n",
-       "      <td>164</td>\n",
        "      <td>Simulation</td>\n",
-       "      <td>2016-02-23</td>\n",
        "      <td>2016</td>\n",
+       "      <td>164</td>\n",
+       "      <td>76561198107283457</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7461483 rows × 7 columns</p>\n",
+       "<p>7461483 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   user_id  item_id           title  playtime_forever  \\\n",
-       "0        76561197970982479       10  Counter-Strike                 6   \n",
-       "1                  js41637       10  Counter-Strike                 0   \n",
-       "2               Riot-Punch       10  Counter-Strike                 0   \n",
-       "3                    doctr       10  Counter-Strike                93   \n",
-       "4           corrupted_soul       10  Counter-Strike               108   \n",
-       "...                    ...      ...             ...               ...   \n",
-       "7461478  76561198071808318   444770    Mimpi Dreams                46   \n",
-       "7461479  76561198107283457   354280      ChaosTower               164   \n",
-       "7461480  76561198107283457   354280      ChaosTower               164   \n",
-       "7461481  76561198107283457   354280      ChaosTower               164   \n",
-       "7461482  76561198107283457   354280      ChaosTower               164   \n",
+       "             genres  year_release  playtime_forever            user_id\n",
+       "0            Action          2000                 6  76561197970982479\n",
+       "1            Action          2000                 0            js41637\n",
+       "2            Action          2000                 0         Riot-Punch\n",
+       "3            Action          2000                93              doctr\n",
+       "4            Action          2000               108     corrupted_soul\n",
+       "...             ...           ...               ...                ...\n",
+       "7461478       Indie          2016                46  76561198071808318\n",
+       "7461479      Action          2016               164  76561198107283457\n",
+       "7461480      Casual          2016               164  76561198107283457\n",
+       "7461481       Indie          2016               164  76561198107283457\n",
+       "7461482  Simulation          2016               164  76561198107283457\n",
        "\n",
-       "             genres release_date  year_release  \n",
-       "0            Action   2000-11-01          2000  \n",
-       "1            Action   2000-11-01          2000  \n",
-       "2            Action   2000-11-01          2000  \n",
-       "3            Action   2000-11-01          2000  \n",
-       "4            Action   2000-11-01          2000  \n",
-       "...             ...          ...           ...  \n",
-       "7461478       Indie   2016-03-22          2016  \n",
-       "7461479      Action   2016-02-23          2016  \n",
-       "7461480      Casual   2016-02-23          2016  \n",
-       "7461481       Indie   2016-02-23          2016  \n",
-       "7461482  Simulation   2016-02-23          2016  \n",
-       "\n",
-       "[7461483 rows x 7 columns]"
+       "[7461483 rows x 4 columns]"
       ]
      },
      "execution_count": 5,
@@ -526,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +484,7 @@
        "{'Año de lanzamiento con más horas jugadas para el género Strategy': 2015}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +571,7 @@
        "  'Año: 2017, Horas: 1990']}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +645,7 @@
        " {'Puesto 3': 'Portal 2'}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +719,7 @@
        " {'Puesto 3': 'Men of War: Vietnam'}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +788,7 @@
        "{'Negative': 486, 'Neutral': 523, 'Positive': 2005}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
