--- a/Jupyter Notebooks/TestAPI.ipynb
+++ b/Jupyter Notebooks/TestAPI.ipynb
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,44 +531,44 @@
     "    minutos_jugados = round(df_genero_user.groupby('year_release')['playtime_forever'].sum(), 3)\n",
     "\n",
     "    # Guardamos la serie 'minutos_jugados' en una lista\n",
-    "    lista_minutos_jugados = [f'Año: {int(anio)}, Horas: {horas}' for anio, horas in minutos_jugados.items()]\n",
+    "    lista_minutos_jugados = [f'Año: {int(anio)}, Minutos: {horas}' for anio, horas in minutos_jugados.items()]\n",
     "\n",
     "    return {f\"Usuario con más horas jugadas para género {genero}\": user, \"Horas jugadas\": lista_minutos_jugados}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'Usuario con más horas jugadas para género Action': 'REBAS_AS_F-T',\n",
-       " 'Horas jugadas': ['Año: 1996, Horas: 0',\n",
-       "  'Año: 1998, Horas: 2',\n",
-       "  'Año: 1999, Horas: 225',\n",
-       "  'Año: 2000, Horas: 0',\n",
-       "  'Año: 2001, Horas: 11',\n",
-       "  'Año: 2002, Horas: 1',\n",
-       "  'Año: 2003, Horas: 1863',\n",
-       "  'Año: 2004, Horas: 2115',\n",
-       "  'Año: 2005, Horas: 3293',\n",
-       "  'Año: 2006, Horas: 138',\n",
-       "  'Año: 2007, Horas: 375',\n",
-       "  'Año: 2008, Horas: 2573',\n",
-       "  'Año: 2009, Horas: 7926',\n",
-       "  'Año: 2010, Horas: 4460',\n",
-       "  'Año: 2011, Horas: 37705',\n",
-       "  'Año: 2012, Horas: 50635',\n",
-       "  'Año: 2013, Horas: 97566',\n",
-       "  'Año: 2014, Horas: 158114',\n",
-       "  'Año: 2015, Horas: 162452',\n",
-       "  'Año: 2016, Horas: 138572',\n",
-       "  'Año: 2017, Horas: 1990']}"
+       " 'Horas jugadas': ['Año: 1996, Minutos: 0',\n",
+       "  'Año: 1998, Minutos: 2',\n",
+       "  'Año: 1999, Minutos: 225',\n",
+       "  'Año: 2000, Minutos: 0',\n",
+       "  'Año: 2001, Minutos: 11',\n",
+       "  'Año: 2002, Minutos: 1',\n",
+       "  'Año: 2003, Minutos: 1863',\n",
+       "  'Año: 2004, Minutos: 2115',\n",
+       "  'Año: 2005, Minutos: 3293',\n",
+       "  'Año: 2006, Minutos: 138',\n",
+       "  'Año: 2007, Minutos: 375',\n",
+       "  'Año: 2008, Minutos: 2573',\n",
+       "  'Año: 2009, Minutos: 7926',\n",
+       "  'Año: 2010, Minutos: 4460',\n",
+       "  'Año: 2011, Minutos: 37705',\n",
+       "  'Año: 2012, Minutos: 50635',\n",
+       "  'Año: 2013, Minutos: 97566',\n",
+       "  'Año: 2014, Minutos: 158114',\n",
+       "  'Año: 2015, Minutos: 162452',\n",
+       "  'Año: 2016, Minutos: 138572',\n",
+       "  'Año: 2017, Minutos: 1990']}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,24 +631,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'Puesto 1': 'Team Fortress 2'},\n",
-       " {'Puesto 2': 'Terraria'},\n",
-       " {'Puesto 3': 'Portal 2'}]"
+       "[{'Puesto 1': 'Counter-Strike: Global Offensive'},\n",
+       " {'Puesto 2': 'Team Fortress 2'},\n",
+       " {'Puesto 3': 'Rust'}]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_3 = UsersRecommend(2011)\n",
+    "top_3 = UsersRecommend(2015)\n",
     "top_3"
    ]
   },
@@ -705,24 +705,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'Puesto 1': 'And Yet It Moves'},\n",
-       " {'Puesto 2': 'Team Fortress 2'},\n",
-       " {'Puesto 3': 'Men of War: Vietnam'}]"
+       "[{'Puesto 1': 'DayZ'}, {'Puesto 2': 'Rust'}, {'Puesto 3': 'theHunter Classic'}]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_3 = UsersNotRecommend(2011)\n",
+    "top_3 = UsersNotRecommend(2014)\n",
     "top_3"
    ]
   },
